<?xml version="1.0"?>
<package>
  <name>kalibr_bag_tools</name>
  <version>0.0.1</version>
  <description>tools extracted from ethz asl kalibr software</description>

  <maintainer email="lteixeira@mavt.ethz.ch">Author</maintainer>
  <license>Kalibr license</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  
  <!-- List dependencies to system libs and other catkin packages here. -->
  <build_depend>sm_python</build_depend>
  <build_depend>aslam_cv_python</build_depend>

</package>
