<?xml version="1.0"?>
<package>
  <name>vi_bag_tools</name>
  <version>1.0.0</version>
  <description>Subset of tools extracted from https://github.com/ethz-asl/kalibr with minors changes in the output format</description>

  <maintainer email="lteixeira@mavt.ethz.ch">Lucas Teixeira</maintainer>

  <author>Paul Furgale</author>
  <license>New BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <build_depend>sm_python</build_depend>
  <build_depend>aslam_cv_python</build_depend>
  <run_depend>sm_python</run_depend>
  <run_depend>aslam_cv_python</run_depend>

</package>
