<?xml version="1.0"?>
<package>
  <name>vi_bag_tools</name>
  <version>1.0.0</version>
  <description>Subset of tools extracted from https://github.com/ethz-asl/kalibr with minors changes in the output format. There is also some extracts from sm_python and aslam_cv_python</description>

  <maintainer email="lteixeira@mavt.ethz.ch">Lucas Teixeira</maintainer>

  <author>Paul Furgale</author>
  <license>New BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
</package>
